@@ -30,8 +30,8 @@ import org.springframework.transaction.annotation.Transactional;
 import org.vaadin.lineawesome.LineAwesomeIcon;
 
 import java.util.*;
-import java.util.concurrent.atomic.AtomicReference;
 
+@SuppressWarnings("SpringTransactionalMethodCallsInspection")
 public class GruppeBearbeitenDialog extends Dialog {
     //Data
     private final Gruppenarbeit gruppenarbeit;
@@ -39,13 +39,13 @@ public class GruppeBearbeitenDialog extends Dialog {
     private Set<Teilnehmer> allTeilnehmer;
     private List<Teilnehmer> gruppenarbeitTeilnehmer;
     private List<Teilnehmer> otherTeilnehmer;
-    private List<Grid<Teilnehmer>> gruppenGrids = new ArrayList<>();
-    ArrayList<GridListDataView<Teilnehmer>> dataViews = new ArrayList<>();
+    private final List<Grid<Teilnehmer>> gruppenGrids = new ArrayList<>();
+    private final ArrayList<GridListDataView<Teilnehmer>> dataViews = new ArrayList<>();
     private final AuthenticatedUser authenticatedUser;
-    private List<H5> titles = new ArrayList<>();
-    private VeranstaltungsterminView veranstaltungsterminView;
-    private List<Button> deleteButtons = new ArrayList<>();
-    private List<Gruppe> groupsToDelete = new ArrayList<>();
+    private final List<H5> titles = new ArrayList<>();
+    private final VeranstaltungsterminView veranstaltungsterminView;
+    private final List<Button> deleteButtons = new ArrayList<>();
+    private final List<Gruppe> groupsToDelete = new ArrayList<>();
 
     //UI Elements
     private final Button cancelBtn = new Button("Abbrechen");
@@ -54,7 +54,7 @@ public class GruppeBearbeitenDialog extends Dialog {
     private final Button mixBtn = new Button("Neu mischen");
     private final Button addAllToGroupBtn = new Button("Alle Veranstaltungsteilnehmer zu Gruppe 1 hinzufügen");
     private final Div groupsArea = new Div();
-    private Grid<Teilnehmer> uebrigeTeilnehmer;
+    private final Grid<Teilnehmer> uebrigeTeilnehmer;
     private final Select<String> groupSize = new Select<>();
 
     //Services
@@ -73,7 +73,7 @@ public class GruppeBearbeitenDialog extends Dialog {
         this.gruppen = gruppenarbeitService.findGruppenarbeitByIdWithGruppen(gruppenarbeit.getId()).getGruppen();
         this.allTeilnehmer = gruppenarbeit.getVeranstaltungstermin().getVeranstaltung().getTeilnehmer();
         this.gruppenarbeitTeilnehmer = gruppenarbeit.getTeilnehmer();
-        this.otherTeilnehmer = new ArrayList<Teilnehmer>(allTeilnehmer);
+        this.otherTeilnehmer = new ArrayList<>(allTeilnehmer);
         otherTeilnehmer.removeAll(gruppenarbeitTeilnehmer);
 
         uebrigeTeilnehmer = new Grid<>(Teilnehmer.class, false);
@@ -146,7 +146,7 @@ public class GruppeBearbeitenDialog extends Dialog {
 
             allTeilnehmer = gruppenarbeit.getVeranstaltungstermin().getVeranstaltung().getTeilnehmer();
             gruppenarbeitTeilnehmer = gruppenarbeit.getTeilnehmer();
-            otherTeilnehmer = new ArrayList<Teilnehmer>(allTeilnehmer);
+            otherTeilnehmer = new ArrayList<>(allTeilnehmer);
             otherTeilnehmer.removeAll(gruppenarbeitTeilnehmer);
             dataViews.add(uebrigeTeilnehmer.setItems(otherTeilnehmer));
 
@@ -211,9 +211,7 @@ public class GruppeBearbeitenDialog extends Dialog {
                 chooseNewGroups.add(groupSize);
 
 
-                cancelBtnDialog.addClickListener(cancel -> {
-                    chooseNewGroups.close();
-                });
+                cancelBtnDialog.addClickListener(cancel -> chooseNewGroups.close());
 
                 confirmBtn.addClickListener(confirm -> {
                     if(groupSize.getOptionalValue().isEmpty()){
@@ -225,9 +223,7 @@ public class GruppeBearbeitenDialog extends Dialog {
                         chooseNewGroups.close();
                     }
                     else{
-                        for(Gruppe gruppe: gruppen){
-                            groupsToDelete.add(gruppe);
-                        }
+                        groupsToDelete.addAll(gruppen);
                         dataViews.subList(1, dataViews.size()).clear();
                         gruppenGrids.subList(1, gruppenGrids.size()).clear();
                         titles.clear();
@@ -275,7 +271,7 @@ public class GruppeBearbeitenDialog extends Dialog {
             if(dataViews.size()>1){
                 dataViews.get(1).addItems(dataViews.get(0).getItems().toList());
                 dataViews.get(0).removeItems(dataViews.get(1).getItems().toList());
-                titles.get(0).setText("Gruppe 1: " + dataViews.get(1).getItems().toList().size() + " Teilnehmer");
+                titles.getFirst().setText("Gruppe 1: " + dataViews.get(1).getItems().toList().size() + " Teilnehmer");
             }
             else {
                 Notification.show("Erst eine neue Gruppe hinzufügen!");
@@ -285,7 +281,7 @@ public class GruppeBearbeitenDialog extends Dialog {
 
     @Transactional
     protected void saveUpdatesToGruppenarbeit() {
-        List<Gruppe> emptyGroups = new ArrayList<Gruppe>();
+        List<Gruppe> emptyGroups = new ArrayList<>();
         for(Gruppe gruppe: gruppen){
             if(dataViews.get(gruppen.indexOf(gruppe)+1).getItems().toList().isEmpty()){
                 emptyGroups.add(gruppe);
@@ -325,14 +321,6 @@ public class GruppeBearbeitenDialog extends Dialog {
     }
 
     private void groupGrids(int numberOfGroups, List<Gruppe> gruppen) {
-//        uebrigeTeilnehmer = new Grid<>(Teilnehmer.class, false);
-//        uebrigeTeilnehmer.addColumn(Teilnehmer::getId).setHeader("Matrikelnr");
-//        uebrigeTeilnehmer.addColumn(Teilnehmer::getVorname).setHeader("Vorname");
-//        uebrigeTeilnehmer.addColumn(Teilnehmer::getNachname).setHeader("Nachname");
-//        uebrigeTeilnehmer.setRowsDraggable(true);
-//        dataViews.add(uebrigeTeilnehmer.setItems(otherTeilnehmer));
-//        gruppenGrids.add(uebrigeTeilnehmer);
-
         for(int i = 0; i< numberOfGroups; i++){
             Grid<Teilnehmer> grid = new Grid<>(Teilnehmer.class, false);
             grid.addColumn(Teilnehmer::getId).setHeader("Matrikelnr");
@@ -374,10 +362,6 @@ public class GruppeBearbeitenDialog extends Dialog {
                     otherGrid.setDropMode(GridDropMode.ON_GRID);
                 }
                 gruppenGrids.set(num, grid);
-//                if(num!=0) {
-//                    titles.get(num - 1).setText("Gruppe " + (num) + ": " + dataViews.get(num).getItems().toList().size() + " Teilnehmer");
-//                }
-
             });
             grid.addDropListener(e -> {
                 int num = gruppenGrids.indexOf(grid);
@@ -466,25 +450,25 @@ public class GruppeBearbeitenDialog extends Dialog {
 
     //Gibt alle möglichen Gruppengrößen und zugehörige Teilnehmeranzahlen als Strings in einer Liste zurück
     private List<String> groupNumbersAndSizes(int participants){
-        List<String> groupStrings = new ArrayList<String>();
+        List<String> groupStrings = new ArrayList<>();
         for(int i:groupNumbers(participants))
         {
-            String str = "";
-            str += i;
-            str += " x ";
+            StringBuilder str = new StringBuilder();
+            str.append(i);
+            str.append(" x ");
 
             for(Iterator<Integer> it = Arrays.stream(groupSizes(i, participants)).iterator(); it.hasNext();){
                 String nextSize = it.next().toString();
                 if(it.hasNext()){
-                    str += nextSize;
-                    str += " und ";
+                    str.append(nextSize);
+                    str.append(" und ");
                 }
                 else{
-                    str += nextSize;
-                    str += " Teilnehmer";
+                    str.append(nextSize);
+                    str.append(" Teilnehmer");
                 }
             }
-            groupStrings.add(str);
+            groupStrings.add(str.toString());
         }
         return groupStrings;
     }
